fix: modal overflow scroll bars removed & account forms style updated

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -154,17 +154,17 @@ main {
     border-radius: 20px;
     white-space: nowrap;
     overflow: auto;
-    -ms-overflow-style: none;
+    /* -ms-overflow-style: none;
     scrollbar-width: none;
     overflow-x: scroll;
-    overflow-y: hidden;
+    overflow-y: hidden; */
 }
 
 .column {
     display: inline-block;
     border-right: 1px dashed var(--project-grey);
     width: 266px;
-    height: 100%;
+    height: 96%;
     margin: 0 5px;
     white-space: nowrap;
     overflow: auto;
@@ -261,7 +261,7 @@ main {
 
 .board .modal-content {
     white-space: wrap;
-    overflow-y: auto;
+    overflow: show;
 }
 
 .task-completed-check-modal { 
@@ -347,16 +347,18 @@ footer {
 }
 
 .image-container {
-    width: 450px;
-    height: 550px;
+    display: flex;
+    flex-grow: 1;
+    width: 305px;
+    height: 400px;
     border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
     background: url('/static/assets/images/intro-screen.jpg') no-repeat center center / cover;
 }
 
 .image-container-signup {
-    width: 450px;
-    height: 550px;
+    width: 305px;
+    height: 400px;
 }
 
 /* Customize appearance of Django Allauth account forms */
@@ -370,6 +372,8 @@ footer {
     border: 2px solid black;
     border-radius: 20px;
     padding: 20px;
+    margin: 10px;
+
 }
 
 .account-form-image {
@@ -377,6 +381,8 @@ footer {
     border: 2px solid black;
     border-radius: 20px;
     margin-top: 37px;
+    margin-bottom: 80px;
+    max-width: 447px;
 }
 
 .dark .account-form,
@@ -439,4 +445,42 @@ label[for="id_login"] {
         margin-top: 15px;
         border-radius: 20px;
     }
+
+    .image-container {
+        width: 450px;
+        height: 550px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    .image-container {
+        width: 350px;
+        height: 497px;
+        border-top-right-radius: 0;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        flex-grow: 0;
+    }
+
+    .account-form-image {
+       max-width: 730px;
+       width: 730px;
+       max-height: 500px;
+    }
+
+    .account-form-image-signup {
+        max-width: 1000px;
+        width: 1000px;
+        max-height: 450px;
+     }
+
+     .image-container-signup {
+        width: 300px;
+        height: 450px;
+        flex-grow: 1
+    }
+
 }
